# src/main/java/com/nm/fragmentsclean/userApplicationContext/write/businesslogic/models/AvatarMediaStatus.java
@@ -1,3 +1,3 @@
 package com.nm.fragmentsclean.userApplicationContext.write.businesslogic.models;
 
-public enum AvatarMediaStatus { PENDING, AVAILABLE, DELETION_PENDING, DELETED }
+public enum AvatarMediaStatus { PENDING, AVAILABLE, RETIRED, DELETION_PENDING, DELETED }
